# ttodo

./: CMakeLists.txt  README.md  main.cpp  nohup.out
include/: AppActions.h  AppState.h  DeleteConfirmationWindow.h  HelpBar.h  HelpWindow.h  MenuStyles.h  StatusLine.h  TagInputWindow.h  TagManagerWindow.h  Task.h  TaskDetails.h  TaskInputWindow.h  TaskList.h  TaskStorage.h  TodoApp.h
src/: AppActions.cpp  AppState.cpp  DeleteConfirmationWindow.cpp  HelpBar.cpp  HelpWindow.cpp  Main.cpp  MenuStyles.cpp  StatusLine.cpp  TagInputWindow.cpp  TagManagerWindow.cpp  Task.cpp  TaskDetails.cpp  TaskInputWindow.cpp  TaskList.cpp  TaskStorage.cpp  TodoApp.cpp
